# python-pytest-examples

./: .gitignore  LICENSE  README.md  pyproject.toml  tmp.txt
python_pytest_examples/: main.py  report.py
python_pytest_examples/parse/: parser.py
test_resources/: parser_input.txt  parser_input.xlsx
tests/parse/: test_parser.py
